--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,33 @@ allprojects {
     }
 }
 
+ext {
+    compileSdkVersionExt = 28
+    buildToolsVersionExt = "28.0.3"
+    minSdkVersionExt = 15
+    targetSdkVersionExt = 28
+    retrofitExt = "2.6.+"
+    okhttp3Ext = "3.10.0"
+    timberExt = "4.5.1"
+    picassoExt = "2.71828"
+    mockWebServerExt = "3.8.0"
+    archLifecycleVersion = "1.+"
+    androidKtxVersion = "2.+"
+    kotlinVersionCore = "1.3.5"
+    roomVersion = "2.2.3"
+    androidKtxLifecycle = "2.2.+"
+    androidKtxLifecycle_livedata = "2.2.0-alpha01"
+    mockitoVersion = "2.+"
+    androidxBasics = "1.1.0"
+    androidxLegacy = "1.0.0"
+    materialLibrary = "1.0.0"
+    androidxContraintLayout = "1.1.3"
+    androidxEspresso = "3.1.0"
+    androidxArch = "2.1.0"
+    androidxTest = "1.0.0"
+    pagingVersion = "1.0.+"
 
+}
 
 task clean(type: Delete) {
     delete buildDir
